--- a/.github/workflows/update-meeting-host.yml
+++ b/.github/workflows/update-meeting-host.yml
@@ -1,9 +1,7 @@
 name: Update Meeting Host
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: "0 9 * * 1-5" # Every weekday at 9 AM
+  workflow_dispatch: # Triggered manually via GitHub Actions
 
 jobs:
   update-host:
